--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "rising-sun",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "keywords": [
-    "webcomponent",
-    "vanilla-js",
-    "vite",
-    "library",
-    "custom-element"
-  ],
-  "author": "David Kurek",
-  "license": "MIT",
-  "type": "module",
-  "main": "dist/rising-sun.js",
-  "module": "dist/rising-sun.js",
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "vite": "^6.3.5"
-  }
+	"name": "rising-sun",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"dev": "vite",
+		"build:lib": "vite build -m lib",
+		"build:site": "vite build -m site",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"keywords": [
+		"webcomponent",
+		"vanilla-js",
+		"vite",
+		"library",
+		"custom-element"
+	],
+	"author": "David Kurek",
+	"license": "MIT",
+	"type": "module",
+	"main": "dist/rising-sun.js",
+	"module": "dist/rising-sun.js",
+	"files": [
+		"dist"
+	],
+	"devDependencies": {
+		"@rollup/plugin-terser": "^0.4.4",
+		"vite": "^6.3.5"
+	}
 }
