--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rising-sun",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "A beautiful animated web component that creates a rising sun effect with smooth transitions and customizable colors.",
 	"author": "David Kurek",
 	"license": "MIT",
@@ -45,6 +45,7 @@
 	"sideEffects": true,
 	"files": [
 		"dist",
+    "docs",
 		"README.md",
 		"LICENSE"
 	],
