--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"bugs": {
 		"url": "https://github.com/daviddomain/rising-sun/issues"
 	},
-	"homepage": "https://github.com/daviddomain/rising-sun#readme",
+	"homepage": "https://daviddomain.github.io/rising-sun/",
 	"publishConfig": {
 		"access": "public"
 	},
